--- a/index.html
+++ b/index.html
@@ -116,37 +116,37 @@
         </header>
 
         <div class="subjects-grid">
-            <a href="#" class="subject-card" onclick="alert('Math reviewer coming soon!'); return false;">
+            <a href="math.html" class="subject-card">
                 <div class="subject-icon math">🔢</div>
                 <h2>Math</h2>
                 <p>Numbers, equations, problem-solving, and mathematical concepts</p>
             </a>
 
-            <a href="#" class="subject-card" onclick="alert('Science reviewer coming soon!'); return false;">
+            <a href="science.html" class="subject-card">
                 <div class="subject-icon science">🔬</div>
                 <h2>Science</h2>
                 <p>Biology, chemistry, physics, and scientific investigations</p>
             </a>
 
-            <a href="#" class="subject-card" onclick="alert('Makabansa reviewer coming soon!'); return false;">
+            <a href="makabansa.html" class="subject-card">
                 <div class="subject-icon makabansa">🇵🇭</div>
                 <h2>Makabansa</h2>
                 <p>Philippine history, culture, values, and national identity</p>
             </a>
 
-            <a href="#" class="subject-card" onclick="alert('GMRC reviewer coming soon!'); return false;">
+            <a href="gmrc.html" class="subject-card">
                 <div class="subject-icon gmrc">❤️</div>
                 <h2>GMRC</h2>
                 <p>Good manners, right conduct, values, and character education</p>
             </a>
 
-            <a href="#" class="subject-card" onclick="alert('Filipino reviewer coming soon!'); return false;">
+            <a href="filipino.html" class="subject-card">
                 <div class="subject-icon filipino">📖</div>
                 <h2>Filipino</h2>
                 <p>Wika, panitikan, gramatika, at pagbasa ng Filipino</p>
             </a>
 
-            <a href="#" class="subject-card" onclick="alert('English reviewer coming soon!'); return false;">
+            <a href="english.html" class="subject-card">
                 <div class="subject-icon english">📝</div>
                 <h2>English</h2>
                 <p>Grammar, reading comprehension, writing, and literature</p>
